# RitterRadar

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 12c0a110fad2_initial_schema.py
config/: sources.yaml
docs/: architecture.md
docs/source/: adapter_guide.rst  api_reference.rst  conf.py  crawler.rst  index.rst  overview.rst
documents/: 00_VISION.md  01_plan.md  02_issues.md  03_sources.md
scripts/: crawl_e2e_test.py  crawl_e2e_test.sh  crawl_status.sh  install.sh  prepare.sh  reset_db.sh  start.sh  start_dev.sh  trigger_crawl.sh
src/ritterradar/: __init__.py  config.py  main.py
src/ritterradar/api/: __init__.py  crawl.py  markets.py  settings.py  sources.py
src/ritterradar/crawler/: __init__.py  base_adapter.py  date_parser.py  http_client.py  queue.py  registry.py  worker.py
src/ritterradar/crawler/adapters/: __init__.py  generic_table.py  marktkalendarium.py  mittelalterfeste.py  mittelalterkalender_info.py  mittelaltermarkt.py  mittelaltermarkt_online.py  ritterschaft.py  schwerttanz.py  spectaculum.py  taterman_at.py  trollfelsen.py  vehi_mercatus.py
src/ritterradar/database/: __init__.py  engine.py  session.py
src/ritterradar/geocoding/: __init__.py  haversine.py  nominatim.py
src/ritterradar/models/: __init__.py  crawl_job.py  geocoding_cache.py  market.py  source.py  user_settings.py
src/ritterradar/static/css/: ritterradar.css
src/ritterradar/static/js/: activity-log.js  crawler-status.js  detail-panel.js  filters.js  map.js
src/ritterradar/templates/: base.html  index.html
tests/: conftest.py  test_date_parser.py  test_haversine.py  test_models.py
tests/api/: test_crawl.py  test_markets.py  test_settings.py
tests/crawler/: test_adapter_base.py  test_date_parser_extra.py
