[build-system]
requires = ["setuptools>=80.0", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "ritterradar"
version = "0.0.30"
description = "Discover German medieval markets, Renaissance festivals, and Viking fairs on an interactive map"
authors = [{name = "Marcel Petrick", email = "mail@marcelpetrick.it"}]
license = {text = "GPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi==0.138.1",
    "uvicorn[standard]==0.49.0",
    "sqlmodel==0.0.39",
    "sqlalchemy==2.0.51",
    "alembic==1.18.5",
    "pydantic-settings==2.14.2",
    "httpx==0.28.1",
    "beautifulsoup4==4.15.0",
    "lxml==6.1.1",
    "geopy==2.4.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "aiofiles==25.1.0",
    "anyio==4.14.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
    "mypy==2.1.0",
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "httpx==0.28.1",
    "sphinx==9.1.0",
    "sphinx-rtd-theme==3.1.0",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-PyYAML==6.0.12.20260518",
    "types-aiofiles==25.1.0.20260518",
]

[project.scripts]
ritterradar = "ritterradar.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ritterradar" = [
    "templates/**/*",
    "static/**/*",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["ritterradar"]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src"]

[[tool.mypy.overrides]]
module = [
    "sqlmodel.*",
    "geopy.*",
    "alembic.*",
    "bs4.*",
    "aiofiles.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=ritterradar",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
source = ["src/ritterradar"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
